--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.16",
     "crypto-js": "^3.1.9-1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
