--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.16",
     "crypto-js": "^3.1.9-1",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.1",
     "yarn": "^1.16.0"
   },
   "scripts": {
