--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.16",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^3.1.9-1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
