--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-scripts": "^5.0.1",
     "yarn": "^1.16.0"
   },
-  "resolutions": { "crypto/crypto-browserify": "^3.12.0" },
+  "resolutions": {
+    "crypto/crypto-browserify": "^3.12.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
