--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.66.1",
     "yarn": "^1.16.0"
-  },
-  "resolutions": {
-    "crypto/crypto-browserify": "^3.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
